# urdf-modifiers

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pypi-ci.yml  tests.yml
assets/: README.md  fomodifier
examples/: iCub3Example.ipynb  stickBotModification.ipynb  stickBotModificationFromConfFile.ipynb
examples/config/: conf.ini
examples/models/stickBot/: model.config  model.urdf
tests/: test_model.urdf  tests.py
urdfModifiers/: __init__.py
urdfModifiers/core/: __init__.py  fixedOffsetModifier.py  jointModifier.py  linkModifier.py  modification.py  modifier.py
urdfModifiers/geometry/: __init__.py  geometry.py
urdfModifiers/utils/: __init__.py  utils.py
