[metadata]
name = urdf-modifiers
description = library to modify urdf 
author = "iCub Tech and AMI Developers"
author_email = nicolo.genesio@iit.it
version = 0.0.3

[options]
packages = find:
python_requires = >=3.7
install_requires =
        urchin
        numpy
        dataclasses
        idyntree
setup_requires =
        wheel
